Fix text alignment in user photo page

--- a/app/assets/stylesheets/album_show.scss
+++ b/app/assets/stylesheets/album_show.scss
@@ -1,6 +1,10 @@
 .photo-gallery-container {
   width: 100%;
   margin-bottom: 20px;
+
+  h2 {
+    text-align: center;
+  }
 }
 
 .album-info-container {
